@@ -7,6 +7,7 @@ Agregado modo Streaming a ZENG Online para ZX Spectrum. Mejora la experiencia de
 Mejorado máximo de teclas enviado a ZENG/ZENG Online
 Permitir aumentar tamaño RAM de Sinclair QL
 Permitir grabar pantalla de ZX80/81 a archivo .scr
+Permitir cargar y grabar archivos de pantalla de QL
 Agregada vista previa de archivos de pantalla de QL
 Agregada conversión de archivos ZX81 P a P81, y P81 a P
 Permitir grabar una nota de texto en un snapshot ZSF
